<resources>
    <string name="app_name">TechDemonstration</string>
    <string name="open_camera">Open Camera</string>
    <string name="picture_taken">picture Taken</string>
    <string name="add_image">Add image</string>
    <string name="button">Log In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="authenticate">Authenticate</string>
    <string name="authenticate_button">Authenticate</string>
    <string name="successfully_logged_in">Successfully LOGGED IN!</string>
</resources>
